RESOLVED FIXED200732
[ContentChangeObserver] Any previously destroyed renderer should not be considered a candidate for content observation.
https://bugs.webkit.org/show_bug.cgi?id=200732
Summary [ContentChangeObserver] Any previously destroyed renderer should not be consi...
alan
Reported 2019-08-14 13:44:41 PDT
"previously" means starting from the beginning of the observation window.
Attachments
Patch (12.09 KB, patch)
2019-08-14 15:12 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2019-08-14 14:38:10 PDT
alan
Comment 2 2019-08-14 15:12:05 PDT
WebKit Commit Bot
Comment 3 2019-08-14 16:53:20 PDT
Comment on attachment 376319 [details] Patch Clearing flags on attachment: 376319 Committed r248695: <https://trac.webkit.org/changeset/248695>
WebKit Commit Bot
Comment 4 2019-08-14 16:53:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.