Source/WebCore/page/ios/ContentChangeObserver.cpp
@@ -342,28 +342,6 @@ void ContentChangeObserver::styleRecalcDidFinish()
     adjustObservedState(Event::EndedStyleRecalc);
 }
 
-void ContentChangeObserver::renderTreeUpdateDidStart()
-{
-    if (!m_document.settings().contentChangeObserverEnabled())
-        return;
-    if (!isObservingContentChanges())
-        return;
-
-    LOG(ContentObservation, "renderTreeUpdateDidStart: RenderTree update started");
-    m_isInObservedRenderTreeUpdate = true;
-    m_elementsWithDestroyedVisibleRenderer.clear();
-}
-
-void ContentChangeObserver::renderTreeUpdateDidFinish()
-{
-    if (!m_isInObservedRenderTreeUpdate)
-        return;
-
-    LOG(ContentObservation, "renderTreeUpdateDidStart: RenderTree update finished");
-    m_isInObservedRenderTreeUpdate = false;
-    m_elementsWithDestroyedVisibleRenderer.clear();
-}
-
 void ContentChangeObserver::stopObservingPendingActivities()
 {
     setShouldObserveNextStyleRecalc(false);
@@ -385,7 +363,6 @@ void ContentChangeObserver::reset()
 
     m_touchEventIsBeingDispatched = false;
     m_isInObservedStyleRecalc = false;
-    m_isInObservedRenderTreeUpdate = false;
     m_observedDomTimerIsBeingExecuted = false;
     m_mouseMovedEventIsBeingDispatched = false;
 
@@ -406,15 +383,15 @@ void ContentChangeObserver::willDetachPage()
     reset();
 }
 
-void ContentChangeObserver::willDestroyRenderer(const Element& element)
+void ContentChangeObserver::rendererWillBeDestroyed(const Element& element)
 { 
     if (!m_document.settings().contentChangeObserverEnabled())
         return;
-    if (!m_isInObservedRenderTreeUpdate)
+    if (!isObservingContentChanges())
         return;
     if (hasVisibleChangeState())
         return;
-    LOG_WITH_STREAM(ContentObservation, stream << "willDestroyRenderer element: " << &element);
+    LOG_WITH_STREAM(ContentObservation, stream << "rendererWillBeDestroyed element: " << &element);
 
     if (!isVisuallyHidden(element))
         m_elementsWithDestroyedVisibleRenderer.add(&element);
@@ -702,17 +679,6 @@ ContentChangeObserver::DOMTimerScope::~DOMTimerScope()
 {
     if (m_contentChangeObserver)
         m_contentChangeObserver->domTimerExecuteDidFinish(m_domTimer);
-}
-
-ContentChangeObserver::RenderTreeUpdateScope::RenderTreeUpdateScope(Document& document)
-    : m_contentChangeObserver(document.contentChangeObserver())
-{
-    m_contentChangeObserver.renderTreeUpdateDidStart();
-}
-
-ContentChangeObserver::RenderTreeUpdateScope::~RenderTreeUpdateScope()
-{
-    m_contentChangeObserver.renderTreeUpdateDidFinish();
 }
 
 }
