Source/WebCore/rendering/updating/RenderTreeUpdater.cpp
@@ -137,10 +137,6 @@ static bool shouldCreateRenderer(const Element& element, const RenderElement& pa
 
 void RenderTreeUpdater::updateRenderTree(ContainerNode& root)
 {
-#if PLATFORM(IOS_FAMILY)
-    ContentChangeObserver::RenderTreeUpdateScope observingScope(m_document);
-#endif
-
     ASSERT(root.renderer());
     ASSERT(m_parentStack.isEmpty());
 
@@ -561,9 +557,6 @@ void RenderTreeUpdater::tearDownRenderers(Element& root, TeardownType teardownTy
             GeneratedContent::removeAfterPseudoElement(element, builder);
 
             if (auto* renderer = element.renderer()) {
-#if PLATFORM(IOS_FAMILY)
-                document.contentChangeObserver().willDestroyRenderer(element);
-#endif
                 builder.destroyAndCleanUpAnonymousWrappers(*renderer);
                 element.setRenderer(nullptr);
             }
